FIX - Modal on mobile + oversized content

--- a/styles.css
+++ b/styles.css
@@ -99,11 +99,19 @@ h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 80vw;
-  max-height: 70vh;
-  background-color: rgba(242, 242, 242, 0.9);
-  box-shadow: 0 0 2px 5px rgba(242, 242, 242, 0.7);
-  border-radius: 16px;
+  max-width: calc(90vw + 16px);
+  max-height: 90vh;
+  background-color: #faf4e8;
+  border: 6px solid #faf4e8;
+  border-radius: 20px;
+}
+
+.modal-content > * {
+    object-fit: contain;
+    height: auto;
+    max-width: 90vw;
+    max-height: 90vh;
+    border-radius: 16px;
 }
 
 .modal input[type="checkbox"]:checked + .modal-container {
@@ -111,6 +119,16 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 99;
   animation: reveal-modal 0.2s;
 }
+
+@keyframes reveal-modal {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  
 
 body {
     background-color: #faf4e8;
@@ -715,7 +733,7 @@ PAGES DE PROJET
 
 #projet_fin {
     width: 100%;
-    height: 200px;
+    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -726,7 +744,7 @@ PAGES DE PROJET
 
 #projet_fin_disposition {
     width: 80%;
-    height: 120px;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
